--- a/app/components/manager/create-modal/create-modal.template.html
+++ b/app/components/manager/create-modal/create-modal.template.html
@@ -11,7 +11,7 @@
         <md-input-container>
           <!-- Name -->
           <label>Name</label>
-          <input ng-model="vm.character.Name" name="CharacterName" type="text" ng-required="true" minlength="5" md-maxlength="40">
+          <input ng-model="vm.character.Name" name="CharacterName" type="text" ng-required="true" minlength="5" md-maxlength="40" ng-pattern="/^[a-zA-Z0-9]*$/">
           <div ng-messages="characterForm.CharacterName.$error" ng-show="characterForm.CharacterName.$dirty && !characterForm.CharacterName.$valid">
             <div ng-message="required">This is required!</div>
             <div ng-message="md-maxlength">That's too long!</div>
@@ -32,7 +32,7 @@
           <!-- Race -->
           <label>Race</label>
           <md-select placeholder="Race" ng-model="vm.character.Race" name="Race" ng-required="true" md-on-open="">
-            <md-option ng-repeat="race in races" value="{{race}}">{{race}}</md-option>
+            <md-option ng-repeat="race in races" value="{{race.Name}}">{{race.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Race.$error" ng-show="characterForm.Race.$dirty && !characterForm.Race.$valid" role="alert">
             <div ng-message="required">This is required!</div>
@@ -42,7 +42,7 @@
           <!-- Class -->
           <label>Class</label>
           <md-select placeholder="Class" ng-model="vm.character.Class" name="Class" ng-required="true" md-on-open="">
-            <md-option ng-repeat="Class in classes" value="{{Class}}">{{Class}}</md-option>
+            <md-option ng-repeat="Class in classes" value="{{Class.Name}}">{{Class.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Class.$error" ng-show="characterForm.Class.$dirty && !characterForm.Class.$valid" role="alert">
             <div ng-message="required">This is required!</div>
@@ -52,7 +52,7 @@
           <!-- Faction -->
           <label>Faction</label>
           <md-select placeholder="Faction" ng-model="vm.character.Faction" name="Faction" ng-required="true" md-on-open="">
-            <md-option ng-repeat="Faction in factions" value="{{Faction}}">{{Faction}}</md-option>
+            <md-option ng-repeat="Faction in factions" value="{{Faction.Name}}">{{Faction.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Faction.$error" ng-show="characterForm.Faction.$dirty && !characterForm.Faction.$valid" role="alert">
             <div ng-message="required">This is required!</div>
