--- a/app/components/manager/manager-template.html
+++ b/app/components/manager/manager-template.html
@@ -1,6 +1,6 @@
 <md-card id="character-table">
-  <md-data-table-toolbar ng-show="!selected.length && !vm.viewDeleted">
-    <h2 class="md-title">Characters</h2>
+  <md-data-table-toolbar ng-show="!vm.selected.length && !vm.viewDeleted">
+    <h2 class="md-title">Active Characters</h2>
     <div flex></div>
     <md-button class="md-icon-button md-button md-default-theme" aria-label="create character" ng-click="vm.showCreateCharacterDialog()">
       <md-icon md-font-icon="zmdi zmdi-plus" class="zmdi-hc-2x"></md-icon>
@@ -10,10 +10,10 @@
     </md-button>
   </md-data-table-toolbar>
   
-  <md-data-table-toolbar class="alternate" ng-show="selected.length && !vm.viewDeleted">
+  <md-data-table-toolbar class="alternate" ng-show="vm.selected.length && !vm.viewDeleted">
     <h2 class="md-title">{{vm.selected.length}} {{vm.selected.length > 1 ? 'characters' : 'character'}} selected</h2>
     <div flex></div>
-    <md-button class="md-icon-button md-button md-default-theme" aria-label="delete character" ng-click="vm.deleteSelected(selected)">
+    <md-button class="md-icon-button md-button md-default-theme" aria-label="delete character" ng-click="vm.deleteSelected(vm.selected)">
       <md-icon md-font-icon="zmdi zmdi-delete" class="zmdi-hc-2x"></md-icon>
     </md-button>
   </md-data-table-toolbar>
@@ -22,7 +22,7 @@
     <h2 class="md-title">Restore {{vm.selected.length}} {{vm.selected.length > 1 ? 'Characters' : 'Character'}}</h2>
     <div flex></div>
     <md-button class="md-raised" aria-label="restore character" ng-click="vm.toggleShowDeleted()">Cancel</md-button>
-    <md-button class="md-raised md-primary" aria-label="restore character" ng-click="">Restore</md-button>
+    <md-button class="md-raised md-primary" aria-label="restore character" ng-click="vm.restoreSelected(vm.selected)">Restore</md-button>
   </md-data-table-toolbar>
   
   <md-data-table-container>
