fix(style): ordering arrow

--- a/app/components/manager/manager-template.html
+++ b/app/components/manager/manager-template.html
@@ -30,11 +30,11 @@
     <table md-data-table md-row-select="vm.selected" md-progress="deferred">
       <thead md-order="order">
         <tr>
-          <th String name="Name" order-by="Name"></th>
-          <th Numeric name="Level" order-by="Level"></th>
-          <th String name="Faction" order-by="Faction"></th>
-          <th String name="Race" order-by="Race"></th>
-          <th String name="Class" order-by="Class"></th>
+          <th string name="Name" order-by="Name"></th>
+          <th numeric name="Level" order-by="Level"></th>
+          <th string name="Faction" order-by="Faction"></th>
+          <th string name="Race" order-by="Race"></th>
+          <th string name="Class" order-by="Class"></th>
         </tr>
       </thead>
       <tbody ng-switch="vm.viewDeleted">
