feat(style): padding

--- a/app/components/manager/create-modal/create-modal-template.html
+++ b/app/components/manager/create-modal/create-modal-template.html
@@ -6,7 +6,7 @@
         <span flex></span>
       </div>
     </md-toolbar>
-    <md-dialog-content>
+    <md-dialog-content style="padding: 5px;">
       <div class="md-dialog-content">
         <md-input-container>
           <!-- Name -->
