fix(component): modal now creates character and shows asap

--- a/app/components/manager/create-modal/create-modal-template.html
+++ b/app/components/manager/create-modal/create-modal-template.html
@@ -11,7 +11,7 @@
         <md-input-container>
           <!-- Name -->
           <label>Name</label>
-          <input ng-model="vm.character.Name" name="CharacterName" type="text" ng-required="true" minlength="5" md-maxlength="40" ng-pattern="/^[a-zA-Z0-9]*$/">
+          <input ng-model="ctrl.parent.character.Name" name="CharacterName" type="text" ng-required="true" minlength="5" md-maxlength="40" ng-pattern="/^[a-zA-Z0-9]*$/">
           <div ng-messages="characterForm.CharacterName.$error" ng-show="characterForm.CharacterName.$dirty && !characterForm.CharacterName.$valid">
             <div ng-message="required">This is required!</div>
             <div ng-message="md-maxlength">That's too long!</div>
@@ -21,7 +21,7 @@
         <md-input-container>
           <!-- Level -->
           <label>Level</label>
-          <input ng-model="vm.character.Level" name="Level" type="number" ng-required="true" step="1" min="1" max="90">
+          <input ng-model="ctrl.parent.character.Level" name="Level" type="number" ng-required="true" step="1" min="1" max="90">
           <div ng-messages="characterForm.Level.$error" ng-show="characterForm.Level.$dirty && !characterForm.Level.$valid">
             <div ng-message="required">This is required!</div>
             <div ng-message="min">Too low</div>
@@ -31,8 +31,8 @@
         <md-input-container>
           <!-- Race -->
           <label>Race</label>
-          <md-select placeholder="Race" ng-model="vm.character.Race" name="Race" ng-required="true" md-on-open="">
-            <md-option ng-repeat="race in races" value="{{race.Name}}">{{race.Name}}</md-option>
+          <md-select placeholder="Race" ng-model="ctrl.parent.character.Race" name="Race" ng-required="true" md-on-open="ctrl.parent.getRaces()">
+            <md-option ng-repeat="race in ctrl.parent.races" value="{{race.Name}}">{{race.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Race.$error" ng-show="characterForm.Race.$dirty && !characterForm.Race.$valid" role="alert">
             <div ng-message="required">This is required!</div>
@@ -41,8 +41,8 @@
         <md-input-container>
           <!-- Class -->
           <label>Class</label>
-          <md-select placeholder="Class" ng-model="vm.character.Class" name="Class" ng-required="true" md-on-open="">
-            <md-option ng-repeat="Class in classes" value="{{Class.Name}}">{{Class.Name}}</md-option>
+          <md-select placeholder="Class" ng-model="ctrl.parent.character.Class" name="Class" ng-required="true" md-on-open="ctrl.parent.getClasses()">
+            <md-option ng-repeat="Class in ctrl.parent.classes" value="{{Class.Name}}">{{Class.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Class.$error" ng-show="characterForm.Class.$dirty && !characterForm.Class.$valid" role="alert">
             <div ng-message="required">This is required!</div>
@@ -51,8 +51,8 @@
         <md-input-container>
           <!-- Faction -->
           <label>Faction</label>
-          <md-select placeholder="Faction" ng-model="vm.character.Faction" name="Faction" ng-required="true" md-on-open="">
-            <md-option ng-repeat="Faction in factions" value="{{Faction.Name}}">{{Faction.Name}}</md-option>
+          <md-select placeholder="Faction" ng-model="ctrl.parent.character.Faction" name="Faction" ng-required="true" md-on-open="ctrl.parent.getFactions()">
+            <md-option ng-repeat="Faction in ctrl.parent.factions" value="{{Faction.Name}}">{{Faction.Name}}</md-option>
           </md-select>
           <div ng-messages="characterForm.Faction.$error" ng-show="characterForm.Faction.$dirty && !characterForm.Faction.$valid" role="alert">
             <div ng-message="required">This is required!</div>
@@ -62,8 +62,8 @@
     </md-dialog-content>
     <div class="md-actions" layout="row">
       <span flex></span>
-      <md-button ng-click="cancel()">Cancel</md-button>
-      <md-button ng-click="create(vm.character)" style="margin-right:20px;">Create</md-button>
+      <md-button ng-click="ctrl.parent.hide()">Cancel</md-button>
+      <md-button ng-click="ctrl.parent.create(ctrl.parent.character)" style="margin-right:20px;" ng-disabled="!characterForm.Class.$valid">Create</md-button>
     </div>
   </form>
 </md-dialog>
